Prevent display from overflowing

--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ button#ac {
 
     font-size: 82px;
     color: #D96941;
+
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .buttons-container {
